Upload Automata-Animated-Visual-Toolkit project