@@ -1,1 +1,7 @@
 # Automata-Animated-Visual-Toolkit
+
+Install JavaFx sdk 21, https://jdk.java.net/javafx21/
+
+To run Automata-Animated-Visual-Toolkit.jar run the following command in the terminal with the jar directory:
+
+java --module-path ./lib/javafx-sdk-21.0.2/lib --add-modules javafx.controls,javafx.fxml -jar Automata-Animated-Visual-Toolkit.jar
